apps/kuard/green.yaml
---
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: green
spec:
  template:
    metadata:
      annotations:
        vault.security.banzaicloud.io/vault-addr: "http://vault.vault:8200"
        vault.security.banzaicloud.io/vault-skip-verify: "true"
        vault.security.banzaicloud.io/vault-env-from-path: "secret/data/kuard"
    spec:
      containers:
        - image: gcr.io/kuar-demo/kuard-amd64:green
          ports:
            - containerPort: 8080
      serviceAccountName: kuard
