apps/kuard/kuard.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kuard
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        vault.security.banzaicloud.io/vault-addr: "https://vault.vault:8200"
        vault.security.banzaicloud.io/vault-skip-verify: "true"
    spec:
      containers:
        - image: gcr.io/kuar-demo/kuard-amd64:blue
          name: kuard-amd64
          ports:
            - containerPort: 8080
              name: web
          resources:
            requests:
              memory: 32Mi
      serviceAccountName: kuard
