apps/kuard/route.yaml
apiVersion: serving.knative.dev/v1
kind: Route
metadata:
  name: master
spec:
  traffic:
    - configurationName: blue
      percent: 80
    - configurationName: green
      percent: 20
